# local-ai-perf-analysis

./: .gitignore  Makefile  README.md  test_unified.sh  trace_demo.json
docs/: CPU_GPU_TRACING_PLAN.md  CUDA_MONITORING.md  PYTHON_ATTRIBUTION.md  QUICK_START.md  RELATED_WORK.md  ROADMAP.md  STATE_REPORT.md  TRACING_FORMATS.md
examples/: cuda_test.cu  test_cuda_direct.py  test_cuda_trace.py
include/: common.h  maps.h
scripts/: check_kernel.sh  demo_unified_trace.sh  setup.sh
src/bpf/: count_packets.bpf.c  trace_cpu_sched.bpf.c  trace_cuda.bpf.c  trace_exec.bpf.c
src/symbolize/: Cargo.toml  blazesym_wrap.h  blazesym_wrap.rs
src/user/: count_packets.c  trace_cuda.c  trace_exec.c  unified_trace.c
tests/ci/: github-actions.yml
tests/e2e/: python_agent.py  run_gpu.sh  run_mock.sh  run_python_agent.sh  validate_trace.py
tests/e2e/synthetic_agent/: agent.py  run.sh  server.py  setup.sh  validate.py
tests/mock/: Makefile  fake_cudart.c  workload.c
tests/unit/: Makefile  test_chrome_json.c  test_event_sort.c
tools/: dev-loop-runner.sh  dev-loop.ps1
